foundation for financials table

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!--TODO: Make toolbar headers not shrink too much-->
+<!--TODO: BUG -- MAKE SIDEBARS (main and nonprofit) not rely on absolute height
+          When the toolbar shrinks or grows slightly it makes it snap into the wrong place -->
 <div class="main-container">
   <!--TOOLBAR / NAV BAR HERE-->
   <div class="nav-bar">
