--- a/src/app/nonprofit/nonprofit-page/nonprofit-page.component.scss
+++ b/src/app/nonprofit/nonprofit-page/nonprofit-page.component.scss
@@ -86,7 +86,7 @@
         .content-row {
             display: flex;
             flex-direction: row;
-            flex: 1 0 100px; 
+            flex: 0 0 250px; 
             .info-box {
                 display: flex;
                 flex-direction: column;
@@ -115,8 +115,10 @@
                     opacity: 0.83;
                 }
                 .content-title {
-                    margin: 0 auto;
+                    text-align: center;
                     font-size: 30px;
+                    color: $primary-off-white;
+                    opacity: 0.85;
                 }
                 .financials-container {
                     display: flex;
@@ -127,16 +129,25 @@
                         .table-header {
                             background-color: $accent-4;
                             color: $primary-off-white;
-                            opacity: 0.8;
+                            opacity: 0.85;
                             .th {
                                 font-size: 19px;
                             }
                         }
+                        .title {
+                            font-weight: bold;
+                        }
+                        .value {
+                            text-align: right;
+                        }
                         .primary-row {
                             background-color: $accent-3;
+                            color: $primary-off-white;
+                            opacity: 0.85;
                         }
                         .alternate-row {
-                            background-color: $accent-2;
+                            background-color: $accent-1;
+                            opacity: 0.85;
                         }
                     }
                 }
