--- a/src/app/nonprofit/nonprofit-page/nonprofit-page.component.html
+++ b/src/app/nonprofit/nonprofit-page/nonprofit-page.component.html
@@ -62,8 +62,8 @@
             </div>
         </div>
         <div class="content-row">
-            <div class="info-box" style="flex: 2 0 200px">
-                <span class="content-title">Financials</span>
+            <div class="info-box" style="flex: 1 0 1000px;">
+                <div class="content-title">Financials</div>
                 <div class="financials-container">
                     <table class="financials-table">
                         <tr class="table-header">
@@ -72,31 +72,31 @@
                         </tr>
                         <tr class="primary-row">
                             <td class="title">Fundraising Efficiency</td>
-                            <td class="value">{{nonprofitRating?.financialRating?.performanceMetrics?.fundraisingEfficiency}}</td>
+                            <td class="value">{{(1 - nonprofitRating?.financialRating?.performanceMetrics?.fundraisingEfficiency! | percent: '0.1') || "N/A"}}</td>
                         </tr>
                         <tr class="alternate-row">
                             <td class="title">Fundraising Expenses Ratio</td>
-                            <td class="value">{{nonprofitRating?.financialRating?.performanceMetrics?.fundraisingExpensesRatio}}</td>
+                            <td class="value">{{(nonprofitRating?.financialRating?.performanceMetrics?.fundraisingExpensesRatio | percent: '0.1') || "N/A"}}</td>
                         </tr>
                         <tr class="primary-row">
                             <td class="title">Program Expenses Growth</td>
-                            <td class="value">{{nonprofitRating?.financialRating?.performanceMetrics?.programExpensesGrowth}}</td>
+                            <td class="value">{{(nonprofitRating?.financialRating?.performanceMetrics?.programExpensesGrowth | percent: '0.1') || "N/A"}}</td>
                         </tr>
                         <tr class="alternate-row">
                             <td class="title">Program Expenses Ratio</td>
-                            <td class="value">{{nonprofitRating?.financialRating?.performanceMetrics?.programExpensesRatio}}</td>
+                            <td class="value">{{(nonprofitRating?.financialRating?.performanceMetrics?.programExpensesRatio  | percent: '0.1') || "N/A"}}</td>
                         </tr>
                         <tr class="primary-row">
                             <td class="title">Administration Expenses Ratio</td>
-                            <td class="value">{{nonprofitRating?.financialRating?.performanceMetrics?.administrationExpensesRatio}}</td>
+                            <td class="value">{{(nonprofitRating?.financialRating?.performanceMetrics?.administrationExpensesRatio | percent: '0.1') || "N/A"}}</td>
                         </tr>
                         <tr class="alternate-row">
                             <td class="title">Liabilities to Assets Ratio</td>
-                            <td class="value">{{nonprofitRating?.financialRating?.performanceMetrics?.liabilitiesToAssetsRatio}}</td>
+                            <td class="value">{{(nonprofitRating?.financialRating?.performanceMetrics?.liabilitiesToAssetsRatio | percent: '0.1') || "N/A"}}</td>
                         </tr>
                         <tr class="primary-row">
-                            <td class="title">Working Capital Ratio</td>
-                            <td class="value">{{nonprofitRating?.financialRating?.performanceMetrics?.workingCapitalRatio}}</td>
+                            <td class="title">Working Capital</td>
+                            <td class="value">{{nonprofitRating?.financialRating?.performanceMetrics?.workingCapitalRatio || "N/A"}} Years</td>
                         </tr>
                     </table>
                     <table class="financials-table">
@@ -106,35 +106,41 @@
                         </tr>
                         <tr class="primary-row">
                             <td class="title">Primary Revenue Growth</td>
-                            <td class="value">{{nonprofitRating?.financialRating?.performanceMetrics?.primaryRevenueGrowth}}</td>
+                            <td class="value">{{(nonprofitRating?.financialRating?.performanceMetrics?.primaryRevenueGrowth | percent: '0.1') || "N/A"}}</td>
                         </tr>
                         <tr class="alternate-row">
                             <td class="title">Fundraising Expenses</td>
-                            <td class="value">{{nonprofitRating?.form990?.fundraisingExpenses}}</td>
+                            <td class="value">{{(nonprofitRating?.form990?.fundraisingExpenses | currency) || "N/A"}}</td>
                         </tr>
                         <tr class="primary-row">
                             <td class="title">Administrative Expenses</td>
-                            <td class="value">{{nonprofitRating?.form990?.administrativeExpenses}}</td>
+                            <td class="value">{{(nonprofitRating?.form990?.administrativeExpenses | currency) || "N/A"}}</td>
                         </tr>
                         <tr class="alternate-row">
                             <td class="title">Program Expenses</td>
-                            <td class="value">{{nonprofitRating?.form990?.programExpenses}}</td>
+                            <td class="value">{{(nonprofitRating?.form990?.programExpenses | currency) || "N/A"}}</td>
                         </tr>
                         <tr class="primary-row">
                             <td class="title">Total Expenses</td>
-                            <td class="value">{{nonprofitRating?.form990?.totalExpenses}}</td>
+                            <td class="value">{{(nonprofitRating?.form990?.totalExpenses | currency) || "N/A"}}</td>
                         </tr>
                         <tr class="alternate-row">
                             <td class="title">Total Revenue</td>
-                            <td class="value">{{nonprofitRating?.form990?.totalRevenue}}</td>
+                            <td class="value">{{(nonprofitRating?.form990?.totalRevenue | currency) || "N/A"}}</td>
                         </tr>
                         <tr class="primary-row">
                             <td class="title">Total Net Assets</td>
-                            <td class="value">{{nonprofitRating?.form990?.totalNetAssets}}</td>
+                            <td class="value">{{(nonprofitRating?.form990?.totalNetAssets | currency) || "N/A"}}</td>
                         </tr>
                     </table>
                 </div>
             </div>
+        </div>
+        <div class="content-row">
+            
+        </div>
+        <div class="content-row">
+            
         </div>
         <div class="content-row">
             
